Clean up mediaCheckFile and printMD5SUM result codes
Change mediaCheckFile to return -2 when file open fails
Add new symbolic result code for failing to find the file -
ISOMD5SUM_FILE_NOT_FOUND.
printMD5SUM now returns result codes instead of calling exit
Add new function to handle rc value and print result string
Add EXIT STATUS section to manpage

--- a/checkisomd5.1
+++ b/checkisomd5.1
@@ -9,6 +9,7 @@ checkisomd5 \(em check an MD5 checksum implanted by \fBimplantisomd5\fR
 This manual page documents briefly the \fBcheckisomd5\fR command.  \fBcheckisomd5\fR is a program that checks an embedded MD5 checksum in a ISO9660 image (.iso), or block device.  The checksum is embedded by the corresponding \fBimplantisomd5\fR command.
 .PP
 The check can be aborted by pressing Esc key.
+.SH "EXIT STATUS"
 .PP
 Program returns exit status 0 if the checksum is correct, or 1 if the checksum is incorrect, non-existent, or check was aborted.
 .SH "OPTIONS"
