Add exit code 2 for user abort (#907600)

--- a/checkisomd5.1
+++ b/checkisomd5.1
@@ -11,7 +11,7 @@ This manual page documents briefly the \fBcheckisomd5\fR command.  \fBcheckisomd
 The check can be aborted by pressing Esc key.
 .SH "EXIT STATUS"
 .PP
-Program returns exit status 0 if the checksum is correct, or 1 if the checksum is incorrect, non-existent, or check was aborted.
+Program returns exit status 0 if the checksum is correct, 1 if the checksum is incorrect or non-existent, or 2 if the check was aborted.
 .SH "OPTIONS"
 .IP "\fB\-\-md5sumonly\fP" 10
 Do not check the target.  Instead, output human-readable information about the target's checksums.
