--- a/README
+++ b/README
@@ -1,3 +1,11 @@
+NOTE: This `history` branch is an inactive branch.
+
+This branch's sole purpose is to capture all of the history of the project from
+when it it was still part of the Anaconda codebase. Future work should still be
+done on the master branch. Thanks to @squimrel for putting this together.
+
+
+
 isomd5sum provides a way of making use of the ISO9660 application data
 area to store md5sum data about the iso.  This allows you to check the
 iso given nothing more than the iso itself.
